[package]
name = "packet_sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.9.2"
serde = "1.0.137"
serde_json = "1.0"
serde_derive = "1.0"
etherparse = "0.12.0"
sprintf = "0.1.2"
chrono = "0.4.22"
clap = { version = "3.2.8", features = ["derive"] }